syntax = "proto3";

option go_package = "emulator/proto/ours/consensus/tendermint/types";

package ours.consensus.tendermint.types;

import "proto/ours/types/part.proto";

// ========== Proposal ========================
message Proposal {
    uint32 vote_type = 1;
    
    ours.types.PartSetHeader header = 2;
    int32 proposer_index = 3;
    bytes block_header_hash = 4;

    string signature = 5;
}

message Prevote {
    uint32 vote_type = 1;

    int32 validator_index = 2;
    int64 height = 3;
    int32 round = 4;
    int32 code = 7;

    bytes block_header_hash = 5;

    string signature = 6;
}

message Precommit{
    uint32 vote_type = 1;

    int32 validator_index = 2;
    int64 height = 3;
    int32 round = 4;

    bytes block_header_hash = 5;

    string signature = 6;

    int32 code = 7;
}

message PrecommitAggregated {
    uint32 vote_type = 1;

    bytes validator_bit_vector = 2;

    ours.types.PartSetHeader header = 3;
    bytes block_header_hash = 4;

    string aggregated_signatures = 5;

    int32 code = 6;
}

message CrossShardProposal {
    uint32 vote_type = 1;
    uint32 shard_type = 3;

    PrecommitAggregated aggregated_signatures = 2;
}

message CrossShardAccept {
    uint32 vote_type = 1;

    string upper_chainID = 2;
    string accept_chainID = 3;
    int32 validator_index = 4;

    int64 Height = 5;
    bytes block_header_hash = 6;

    bytes commit_status = 7;

    string signature = 8;
}

message CrossShardCommit {
    uint32 vote_type = 1;

    string upper_chainID = 2;
    int64 Height = 3;
    bytes block_header_hash = 4;

    repeated string chain_list = 5;
    repeated string aggregated_signature_list = 6;
    repeated bytes validator_bit_vector_list =  7;
    repeated bytes commit_status_list = 8;
}
